fixed alignment of filter select

--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,10 @@ body {
     color: lightgray;
 }
 
+.todo .table {
+    position: relative;
+}
+
 .todo td {
     border: 1px solid #a30119;
     text-align: left;
@@ -132,14 +136,14 @@ label {
 }
 
 select {
+    position: absolute;
+    left:235px;
     background-color: #8aa4f2;
     font-family: "Permanent Marker";
     color: #434344;
     border: none;
     -webkit-appearance: none;
     -moz-appearance: none;
-    position: element(#table);
-    transform: translateX(118%);
 }
 
 select::-ms-expand {
